
	* net/tramp.el (tramp-methods, tramp-connection-timeout): Fix docstring.

	* net/tramp-sh.el (tramp-sh-handle-vc-registered): Revert change
	from 2014-03-07, it decreases performance unnecessarily.  Let-bind
	`remote-file-name-inhibit-cache' to nil in the second pass.
	(tramp-find-executable): Do not call "which" on SunOS.
	(tramp-send-command-and-check): Fix docstring.

2014-03-24  Barry O'Reilly  <gundaetiapo@gmail.com>

	* simple.el (primitive-undo): Only process marker adjustments
	validated against their corresponding (TEXT . POS).  Issue warning
	for lone marker adjustments in undo history.  (Bug#16818)
	(undo-make-selective-list): Add marker adjustments to selective
	undo list based on whether their corresponding (TEXT . POS) is in
	the region.  Remove variable adjusted-markers, which was unused
	and only non nil during undo-make-selective-list.
	(undo-elt-in-region): Return nil when passed a marker adjustment
	and explain in function doc.

2014-03-24  Dmitry Gutov  <dgutov@yandex.ru>

	* emacs-lisp/package.el (package--add-to-archive-contents):
	Include already installed and built-in packages in
	`package-archive-contents'.
	(package-install): Don't include already installed packages in the
	options during interactive invocation.  (Bug#16762)

2014-03-24  Daniel Colascione  <dancol@dancol.org>

	* emacs-lisp/cl-macs.el (cl--do-arglist): Use `plist-member'
	instead of cl-loop search function.

2014-03-24  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset--initial-params): Fix typo in parameter name.

2014-03-24  Nicolas Richard  <theonewiththeevillook@yahoo.fr>

	* align.el (align-region): Do not fail when end-mark is nil (bug#17088).

2014-03-24  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-expression-expansion-re):
	Match special global variables without curlies, too.
	(ruby-font-lock-keywords): Simplify the matcher for special global
	variables.  Don't require a non-word character after the variable.
	(Bug#17057)
